# EnerBe

./: CMakeLists.txt  README.md  liza_aarch64_cuda_env.sh  liza_env.sh  liza_x86_cuda_env.sh
EnerBe/: bench_config.json  main.py  plot.py
benchmarker/: bench_config.json  main.py  plot.py
benchmarker/tmp_results/: results.csv
lbm/: aneurysm.cpp  input_1_node_XL.xml  input_1_node_big.xml  install_palabos.sh
lbm/plb/: CMakeLists.txt  aneurysm.cpp  input_1_node.xml  input_1_node_XL.xml  input_1_node_big.xml  install_palabos.sh
results/: results.csv  results_test.csv  results_tmp.csv
scripts/: bench_config.json  benchmarker.py  concatonate_results.py  job_genoa.sh  job_rome.sh
src/: CMakeLists.txt  EnerBe.h  argparser.h  axpy_pmt.cpp  axpy_pmt.cu  axpy_pmt.hip  helper.h  mesh.cpp  mesh.h  mesh.hpp  xEnerBe.cpp  xaxpy.cpp  xaxpy_pmt.hip  xgemm.hip  xgemm_pmt.cpp  xgemm_pmt.cu  xgemm_pmt.hip
src/cpp/: CMakeLists.txt  jacobi.cpp  kernals.h  xEnerBe.cpp  xaxpy.cpp  xaxpy_pmt.cpp  xgemm.cpp  xgemm_pmt.cpp  xgemm_sycl.cpp  xjacobi.cpp
src/cuda/: CMakeLists.txt  kernals.h  xaxpy.cu  xaxpy_pmt.cu  xgemm.cu  xgemm_pmt.cu
src/hip/: CMakeLists.txt  xaxpy.hip  xaxpy_pmt.hip  xgemm.hip  xgemm_pmt.hip
tmp_results/: results.csv
